# calvin-rag-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy-api-fly.yml  deploy-api.yml  test.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/http/: api.http
api/middleware/: audit_log.py  rate_limiter.py  token_budget.py
api/routes/: _chat_v2_envelope.py  chat.py  chat_v2.py  conversations.py  glossary.py  health.py  invite.py  stats.py  title.py
app/: calvin_chatbot.py
app/pages/: 01_compare_modes.py
chatbot/: __init__.py
chatbot/application/: __init__.py  _protocols.py  bootstrap.py  orchestrator.py  registries.py
chatbot/domain/: __init__.py  conversation.py  corpus.py  graph.py  indexing.py  intent.py  persistence.py  pipeline.py  retrieval.py  state.py  strategy.py  tools.py  turn_artifact.py
chatbot/infrastructure/: __init__.py  answer_composer.py  intent_llm.py  rewriter_llm.py  router.py
data/glossary/: calvin.json
docs/: demo-questions.md
docs/guides/: deployment.md  legacy-route-deprecation.md
docs/me/: 001-tradeoff-table.md  002-cost-conscious-iterative-build.md  003-port-adapter-with-config-branching.md  004-repo-separation-learning-vs-production.md  005-graceful-degradation-with-feature-flags.md  006-naming-conventions.md  007-observability-and-mode-comparison.md  008-srp-refactor-retriever-and-parser.md  009-llm-guardrails-decision.md  010-nextjs-fastapi-migration.md  011-perplexity-style-redesign.md  012-conversation-first-architecture.md  013-supabase-persistence-decisions.md  README.md
docs/plans/: 11-audit.md  12-audit.md  13-audit.md  14-audit.md  2-A-phase1-audit.md  2-A-phase2-audit.md  2-B-phase1-audit.md  2-B-phase2-audit.md  2-C-phase1-audit.md  2-C-phase2-audit.md  2-D-audit.md  3-phase1-audit.md  3-phase2-audit.md  4-phase1-audit.md  4-phase2-audit.md  5-audit.md  6-audit.md  6-phaseB-audit.md
infra/: __init__.py  alerting.py  budget.py  circuit_breaker.py  document_loader.py  env.py  env_loader.py  health_probes.py  index_cache.py  invite_codes.py  llm_cache.py  observability.py  observability_sinks.py  pii_redactor.py  usage_tracker.py
rag_core/: __init__.py  agentic.py  calvin_builder.py  citation_label.py  followup.py  glossary.py  hybrid.py  mode_dispatcher.py  mode_registry.py  postprocess.py  retriever.py  router.py  title_gen.py  tokenizer.py  vision_rag.py
rag_core/guardrail/: __init__.py  chain.py  dump_guard.py  factory.py  keyword_guard.py  length_guard.py  openai_moderation_adapter.py  port.py
rag_core/kg/: __init__.py  config.py  entity_normalizer.py  extractor.py  factory.py  graph_renderer.py  neo4j_adapter.py  pipeline.py  port.py  section_filter.py
rag_core/tools/: __init__.py  mcp_adapter.py  policy.py  registry.py
scripts/: boot.sh  build_glossary.py  build_glossary_from_kg.py  index_kg.py  inspect_kg_glossary.py  push_index_to_hf.py  verify_api.sh
sql/migrations/: 2026_05_06_conversations.sql  2026_05_19_conversation_turn_artifacts.sql
tests/: conftest.py  test_agent_message_parser.py  test_api_endpoints.py  test_api_health.py  test_api_middleware.py  test_chat_v2_endpoint.py  test_chat_v2_persistence.py  test_citation_label.py  test_conversations_route.py  test_entity_normalizer.py  test_followup.py  test_graceful_degradation.py  test_guardrail.py  test_imports.py  test_kg_port.py  test_mode_dispatcher.py  test_openai_moderation_adapter.py  test_pii_redactor.py  test_retriever.py  test_router.py  test_tool_registry.py  test_usage_tracker.py
tests/chatbot/: fakes.py  test_agent_parser.py  test_agentic_strategy.py  test_answer_composer.py  test_attachment_validator.py  test_corpus_calvin.py  test_graph_store.py  test_hybrid_strategy.py  test_intent_classifier.py  test_kg_stages.py  test_kg_strategy.py  test_mcp_client.py  test_nodes.py  test_orchestrator.py  test_parsers.py  test_persistence_protocol.py  test_prepare_image_payload.py  test_query_rewriter.py  test_rerankers.py  test_retrievers.py  test_search_tool.py  test_stages.py  (+7 more)
web/: .env.local.example  .gitignore  FEATURES.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+113 files in other folders)
