[project]
name = "calvin-rag-chatbot"
version = "0.1.0"
description = "칼빈 강요(Institutes of the Christian Religion) Hybrid RAG 챗봇"
requires-python = ">=3.11"

dependencies = [
    # LangChain 1.x
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=0.4.0",

    # LangGraph (Hybrid 그래프 + Agentic create_agent)
    "langgraph>=1.0.0",

    # Vector store
    "faiss-cpu>=1.8.0",

    # OpenAI
    "openai>=1.50.0",

    # PDF 로딩
    "pymupdf>=1.24",

    # BM25 (한국어 토크나이저 + Hybrid 검색)
    "rank_bm25>=0.2.2",

    # 환경변수/설정
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # 토큰 카운팅 (선택이나 임베딩 비용 추정용)
    "tiktoken>=0.8.0",

    # 인덱스 storage 분리 (Private HF Dataset 에서 부팅 시 fetch — 저작권 자산 가림)
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
# Cross-encoder 재랭커 (FlashRank, 로컬 추론)
rerank = ["flashrank>=0.2.0"]

# v2: Knowledge Graph 모드 (Neo4j)
kg = [
    "langchain-neo4j>=0.2.0",
    "langchain-experimental>=0.3.0",   # LLMGraphTransformer
    "neo4j>=5.20",
]

dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

# Phase 2: FastAPI 백엔드 (Next.js 프론트와 함께 사용)
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",       # EventSourceResponse (keep-alive, 재연결)
    "slowapi>=0.1.9",           # IP 단위 rate limiting
    "pyjwt[crypto]>=2.8",       # Cloudflare Access JWT 검증
    "httpx>=0.27",              # CF JWKS fetch
]

# Phase 11: Supabase 영속화 (PRD-002 / TRD-011)
persistence = [
    "supabase>=2.7",            # ConversationStore Supabase 어댑터
]

# 한 번에 다 설치
all = [
    "flashrank>=0.2.0",
    "langchain-neo4j>=0.2.0",
    "langchain-experimental>=0.3.0",
    "neo4j>=5.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "supabase>=2.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# 패키지로 빌드 대상: rag_core, infra, chatbot (api/web 은 진입 스크립트/별도 워크스페이스라 제외)
[tool.setuptools.packages.find]
where = ["."]
include = ["rag_core*", "infra*", "chatbot*"]
exclude = ["api*", "web*", "tests*", "data*", "indexes*", ".venv*"]

[tool.ruff]
line-length = 100
target-version = "py311"

# api/main.py 와 scripts/* 는 load_dotenv() 호출 후 import 패턴이 의도적이므로 E402 허용
[tool.ruff.lint.per-file-ignores]
"api/main.py" = ["E402"]
"scripts/*.py" = ["E402"]
